--- a/quickstart/tsconfig.json
+++ b/quickstart/tsconfig.json
@@ -8,6 +8,6 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false,
-    "outdir": "dist"
+    "outDir": "dist"
   }
 }
